# ai-contest-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: webapp-deploy.yml
archive/alembic/: env.py
archive/models/: db.py
scripts/: build_webapp.sh  daily_run.sh  spike_claude_cli.py  spike_contestkorea.py  spike_weasyprint.py  spike_wevity.py  start_channels.sh
src/: __init__.py  config.py  main.py
src/analyzers/: __init__.py  contest_analyzer.py  pipeline.py  roi_scorer.py
src/bot/: agent.py  callbacks.py  telegram_bot.py
src/collectors/: __init__.py  base.py  contestkorea.py  filters.py  wevity.py
src/core/: __init__.py  claude_cli.py  protocols.py  state_machine.py  storage.py
src/dashboard/: __init__.py  cli_dashboard.py
src/generators/: data_analyzer.py  pdf_engine.py  report_generator.py
src/generators/templates/: analysis_report.md.j2  idea_proposal.md.j2
src/models/: __init__.py  analysis.py  artifact.py  contest.py  enums.py  guide.py
src/notifiers/: __init__.py  base.py  deadline_notifier.py  submission_guide.py  telegram.py  views.py
tests/fixtures/: telegram_callback_query.json  telegram_message_update.json
tests/unit/: test_analyzer.py  test_artifact_status.py  test_callbacks.py  test_cli.py  test_contestkorea.py  test_digest_command.py  test_generators.py  test_notifiers.py  test_phase1.py  test_telegram_bot.py  test_telegram_notifier.py  test_telegram_spike.py  test_views.py  test_wevity.py
webapp/: app.js  index.html  styles.css
