[project]
name = "infoke"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "typer>=0.24.1",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
