[project]
name = "infoke"
version = "0.1.0"
description = "공모전 에이전트 (codename: infoke) — 한국 공공 AI 공모전 자동 수집/분석/보고서 생성"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0,<3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "structlog>=25.5.0",
    "typer>=0.24.1",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-httpx>=0.30",
    "pytest-asyncio>=0.23",
]
